# pypestvis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: freyberg.ipynb  lheg.ipynb
examples/freyberg_ies/: freyberg.base.obs.csv  freyberg.insfile_data.csv  freyberg.par_data.csv  freyberg.pargp_data.csv  freyberg.pst  freyberg.tplfile_data.csv  freyberg6.dis  freyberg6.nam  freyberg6.tdis  mfsim.nam
examples/lheg_ies/: lhgzsi.dis  lhgzsi.dis.grb  lhgzsi.dis_botm.txt  lhgzsi.dis_delc.txt  lhgzsi.dis_delr.txt  lhgzsi.dis_idomain.txt  lhgzsi.dis_top.txt  lhgzsi.insfile_data.csv  lhgzsi.nam  lhgzsi.obs_data.csv  lhgzsi.par_data.csv  lhgzsi.pargp_data.csv  lhgzsi.pst  lhgzsi.tdis  lhgzsi.tplfile_data.csv  mfsim.nam  modelgrid.pkl  modeltime.pkl  scenario.csv
src/pypestvis/: __init__.py  core.py  utils.py
tests/: test_vis.py
