[project]
name = "pypestvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brioch", email = "briochh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "flopy>=3.9.5",
    "geopandas>=1.1.1",
    "ipywidgets>=8.1.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyemu>=1.3.8",
    "shapely>=2.1.2",
]

[project.scripts]
pypestvis = "pypestvis:main"

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
pyemu = { git = "https://github.com/pypest/pyemu", rev = "develop" }
