[project]
name = "pypestvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brioch", email = "briochh@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "anywidget",
    "flopy",
    "geopandas",
    "ipywidgets",
    "numpy",
    "pandas",
    "plotly",
    "pyemu",
    "shapely",
]

[project.scripts]
pypestvis = "pypestvis:main"

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
pyemu = { git = "https://github.com/pypest/pyemu", rev = "develop" }
